--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <img border="0" width="90" src="https://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="https://github.com/yatendra/saasapp">SaasApp</a>
-      <span class="small">by <a href="https://github.com/yatendra">yatendra</a></span></h1>
+    <h1><a href="https://github.com/yatendra/saasapp">SaasApp</a></h1>
 
     <div class="description">
       SaasApp is a starter kit for creating a software as a service (SAAS) application using ASP.Net, JQuery and MySQL. It uses Twitter's bootstrap framework for layout.
